fix time int64 can edit and add transaction
