# money-core/docs/swagger.json
@@ -265,55 +265,6 @@
             }
         },
         "/transaction/": {
-            "get": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
-                "description": "Add new transaction",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "transaction"
-                ],
-                "summary": "Add new transaction",
-                "parameters": [
-                    {
-                        "description": "Get transaction",
-                        "name": "create",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/view.TransactionForm"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/view.TransactionForm"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/controller.AppError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/controller.AppError"
-                        }
-                    }
-                }
-            },
             "put": {
                 "security": [
                     {
@@ -338,7 +289,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/view.TransactionForm"
+                            "$ref": "#/definitions/view.EditTransactionForm"
                         }
                     }
                 ],
@@ -346,7 +297,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/view.TransactionForm"
+                            "$ref": "#/definitions/view.EditTransactionForm"
                         }
                     },
                     "400": {
@@ -362,10 +313,57 @@
                         }
                     }
                 }
-            }
-        },
-        "/transaction/delete": {
-            "put": {
+            },
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "Add new transaction",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "transaction"
+                ],
+                "summary": "Add new transaction",
+                "parameters": [
+                    {
+                        "description": "Get transaction",
+                        "name": "create",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/view.AddTransactionForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/view.AddTransactionForm"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/controller.AppError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/controller.AppError"
+                        }
+                    }
+                }
+            },
+            "delete": {
                 "security": [
                     {
                         "JWT": []
@@ -742,9 +740,59 @@
                 }
             }
         },
+        "view.AddTransactionForm": {
+            "type": "object",
+            "required": [
+                "amount",
+                "cat_id",
+                "wallet_id"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "cat_id": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "transaction_date": {
+                    "type": "integer"
+                },
+                "wallet_id": {
+                    "type": "string"
+                }
+            }
+        },
         "view.DeleteTransactionForm": {
             "type": "object",
             "properties": {
+                "transaction_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "view.EditTransactionForm": {
+            "type": "object",
+            "required": [
+                "amount",
+                "cat_id",
+                "transaction_id"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "cat_id": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "transaction_date": {
+                    "type": "integer"
+                },
                 "transaction_id": {
                     "type": "string"
                 }
